# opengl2-compute

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: App.cpp  App.h  Shader.cpp  Shader.h  main.cpp
